@@ -46,7 +46,7 @@ class Swift_Mime_IdGenerator implements Swift_IdGenerator
      */
     public function generateId()
     {
-        $idLeft = md5(getmypid().'.'.time().'.'.uniqid(mt_rand(), true));
+        $idLeft = bin2hex(random_bytes(16)); // set 32 hex values
 
         return $idLeft.'@'.$this->idRight;
     }
