@@ -4,6 +4,7 @@ Changelog
 6.0.2 (2017-XX-XX)
 ------------------
 
+ * removed usage of getmypid()
  * n/a
 
 6.0.1 (2017-05-20)
